# XPYING_RM_Project

AUTO_AIM_PROJECT/Armor_auto_aim/: README.md
AUTO_AIM_PROJECT/Armor_auto_aim/src/armor_dectetor/: CMakeLists.txt
AUTO_AIM_PROJECT/Armor_auto_aim/src/armor_dectetor/include/: PnP_Solver.h
AUTO_AIM_PROJECT/Armor_auto_aim/src/armor_dectetor/src/: armor_match.cpp  armor_node.cpp  pnp_solver.cpp
AUTO_AIM_PROJECT/Armor_auto_aim/src/armor_parameter/: CMakeLists.txt
AUTO_AIM_PROJECT/Armor_auto_aim/src/armor_parameter/msg/: Armor.msg
AUTO_AIM_PROJECT/Armor_auto_aim/src/image_publish/: CMakeLists.txt  package.xml
AUTO_AIM_PROJECT/Armor_auto_aim/src/image_publish/src/: camera_node.cpp
AUTO_AIM_PROJECT/Armor_auto_aim/src/kalman_predict/: CMakeLists.txt
AUTO_AIM_PROJECT/Armor_auto_aim/src/kalman_predict/include/: Kalman_predict.h
AUTO_AIM_PROJECT/Armor_auto_aim/src/kalman_predict/src/: kalman_node.cpp  kalman_predict.cpp
Armor_auto_aim/: README
Armor_auto_aim/src/armor_dectetor/: package.xml
Armor_auto_aim/src/armor_dectetor/include/: Armor_match.h
Armor_auto_aim/src/armor_dectetor/src/: armor_match.cpp  armor_node.cpp
Armor_auto_aim/src/armor_parameter/: package.xml
Armor_auto_aim/src/kalman_predict/: package.xml
Armor_auto_aim/src/kalman_predict/include/: Kalman_predict.h
Armor_auto_aim/src/kalman_predict/src/: kalman_node.cpp
